Fix collapses margin bottom

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -68,7 +68,7 @@ $main-color : #FF6060;
     }
 }
 
-#about {
+@media (max-width: 768px) {
     .collapse {
 
         .collapse__header {
