--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -14,12 +14,13 @@
 
 @media (max-width: 768px) {
     #about {
-        padding: 15px;
+        padding: 0px 15px;
 
         .about__collapses {
             width: 100%;
             padding: 0;
             gap: 20px;
+            margin-bottom: 20px;
         }
     }
 }
